src/tpc.output
État 181 conflits: 1 décalage/réduction


Grammaire

    0 $accept: Prog $end

    1 Prog: DeclConsts DeclVars DeclFoncts

    2 DeclConsts: DeclConsts CONST ListConst ';'
    3           | DeclConsts error ListConst ';'
    4           | DeclConsts CONST error ';'
    5           | %empty

    6 ListConst: ListConst ',' IDENT '=' Litteral
    7          | ListConst error IDENT '=' Litteral
    8          | ListConst ',' error '=' Litteral
    9          | ListConst ',' IDENT error Litteral
   10          | ListConst ',' IDENT '=' error
   11          | IDENT '=' Litteral
   12          | IDENT error Litteral
   13          | IDENT '=' error
   14          | error '=' Litteral

   15 Litteral: NombreSigne
   16         | CARACTERE

   17 NombreSigne: NUM
   18            | ADDSUB NUM

   19 DeclVars: DeclVars TYPE Declarateurs ';'
   20         | %empty

   21 Declarateurs: Declarateurs ',' Declarateur
   22             | Declarateur

   23 Declarateur: IDENT
   24            | error
   25            | Declarateur '[' NUM ']'

   26 DeclFoncts: DeclFoncts DeclFonct
   27           | DeclFonct

   28 DeclFonct: EnTeteFonct Corps

   29 EnTeteFonct: TYPE IDENT '(' Parametres ')'
   30            | VOID IDENT '(' Parametres ')'

   31 Parametres: VOID
   32           | %empty
   33           | ListTypVar

   34 Identtab: IDENT '[' ']'
   35         | Identtab '[' ']'
   36         | Identtab error ']'
   37         | Identtab error error

   38 ListTypVar: ListTypVar ',' TYPE IDENT
   39           | TYPE IDENT
   40           | TYPE Identtab

   41 Corps: '{' DeclConsts DeclVars SuiteInstr '}'

   42 SuiteInstr: SuiteInstr Instr
   43           | %empty

   44 Instr: Exp ';'
   45      | ';'
   46      | RETURN Exp ';'
   47      | RETURN ';'
   48      | READE '(' IDENT ')' ';'
   49      | READC '(' IDENT ')' ';'
   50      | PRINT '(' Exp ')' ';'
   51      | IF '(' Exp ')' Instr
   52      | IF '(' Exp ')' Instr ELSE Instr
   53      | WHILE '(' Exp ')' Instr
   54      | '{' SuiteInstr '}'
   55      | DO Instr WHILE '(' Exp ')' ';'
   56      | FOR '(' ListExpF ';' ExpF ';' ListExpF ')' Instr
   57      | SWITCH '(' Exp ')' '{' Caseswitchs Defaultswitch '}'

   58 FinCase: BREAK ';'
   59        | %empty

   60 Caseswitch: CASE '(' Litteral ')' ':' Instr FinCase

   61 Defaultswitch: DEFAULT ':' Instr
   62              | %empty

   63 Caseswitchs: Caseswitch
   64            | Caseswitchs Caseswitch

   65 ListExpF: ListExp
   66         | %empty

   67 ExpF: Exp
   68     | %empty

   69 Exp: LValue '=' Exp
   70    | EB

   71 EB: EB OR TB
   72   | TB

   73 TB: TB AND FB
   74   | FB

   75 FB: FB EQ M
   76   | M

   77 M: M ORDER E
   78  | E

   79 E: E ADDSUB T
   80  | T

   81 T: T DIVSTAR F
   82  | F

   83 F: ADDSUB F
   84  | '!' F
   85  | '(' Exp ')'
   86  | LValue
   87  | NUM
   88  | CARACTERE
   89  | IDENT '(' Arguments ')'
   90  | StructValue

   91 StructValue: VALUE '(' Exp ')' '{' Valueargs Defaultvalue '}'

   92 Valuearg: Litteral ':' Exp ';'

   93 Valueargs: Valueargs Valuearg
   94          | Valuearg

   95 Defaultvalue: DEFAULT ':' Exp ';'

   96 LValue: IDENT
   97       | LValue '[' Exp ']'

   98 Arguments: ListExp
   99          | %empty

  100 ListExp: ListExp ',' Exp
  101        | Exp


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'!' (33) 84
'(' (40) 29 30 48 49 50 51 52 53 55 56 57 60 85 89 91
')' (41) 29 30 48 49 50 51 52 53 55 56 57 60 85 89 91
',' (44) 6 8 9 10 21 38 100
':' (58) 60 61 92 95
';' (59) 2 3 4 19 44 45 46 47 48 49 50 55 56 58 92 95
'=' (61) 6 7 8 10 11 13 14 69
'[' (91) 25 34 35 97
']' (93) 25 34 35 36 97
'{' (123) 41 54 57 91
'}' (125) 41 54 57 91
error (256) 3 4 7 8 9 10 12 13 14 24 36 37
CARACTERE (258) 16 88
NUM (259) 17 18 25 87
IDENT (260) 6 7 9 10 11 12 13 23 29 30 34 38 39 48 49 89 96
TYPE (261) 19 29 38 39 40
EQ (262) 75
ORDER (263) 77
ADDSUB (264) 18 79 83
DIVSTAR (265) 81
OR (266) 71
AND (267) 73
RETURN (268) 46 47
BREAK (269) 58
IF (270) 51 52
ELSE (271) 52
WHILE (272) 53 55
READE (273) 48
READC (274) 49
VOID (275) 30 31
PRINT (276) 50
CONST (277) 2 4
DO (278) 55
FOR (279) 56
SWITCH (280) 57
CASE (281) 60
DEFAULT (282) 61 95
VALUE (283) 91


Non-terminaux, suivis des règles où ils apparaissent

$accept (40)
    à gauche: 0
Prog (41)
    à gauche: 1, à droite: 0
DeclConsts (42)
    à gauche: 2 3 4 5, à droite: 1 2 3 4 41
ListConst (43)
    à gauche: 6 7 8 9 10 11 12 13 14, à droite: 2 3 6 7 8 9 10
Litteral (44)
    à gauche: 15 16, à droite: 6 7 8 9 11 12 14 60 92
NombreSigne (45)
    à gauche: 17 18, à droite: 15
DeclVars (46)
    à gauche: 19 20, à droite: 1 19 41
Declarateurs (47)
    à gauche: 21 22, à droite: 19 21
Declarateur (48)
    à gauche: 23 24 25, à droite: 21 22 25
DeclFoncts (49)
    à gauche: 26 27, à droite: 1 26
DeclFonct (50)
    à gauche: 28, à droite: 26 27
EnTeteFonct (51)
    à gauche: 29 30, à droite: 28
Parametres (52)
    à gauche: 31 32 33, à droite: 29 30
Identtab (53)
    à gauche: 34 35 36 37, à droite: 35 36 37 40
ListTypVar (54)
    à gauche: 38 39 40, à droite: 33 38
Corps (55)
    à gauche: 41, à droite: 28
SuiteInstr (56)
    à gauche: 42 43, à droite: 41 42 54
Instr (57)
    à gauche: 44 45 46 47 48 49 50 51 52 53 54 55 56 57, à droite:
    42 51 52 53 55 56 60 61
FinCase (58)
    à gauche: 58 59, à droite: 60
Caseswitch (59)
    à gauche: 60, à droite: 63 64
Defaultswitch (60)
    à gauche: 61 62, à droite: 57
Caseswitchs (61)
    à gauche: 63 64, à droite: 57 64
ListExpF (62)
    à gauche: 65 66, à droite: 56
ExpF (63)
    à gauche: 67 68, à droite: 56
Exp (64)
    à gauche: 69 70, à droite: 44 46 50 51 52 53 55 57 67 69 85 91
    92 95 97 100 101
EB (65)
    à gauche: 71 72, à droite: 70 71
TB (66)
    à gauche: 73 74, à droite: 71 72 73
FB (67)
    à gauche: 75 76, à droite: 73 74 75
M (68)
    à gauche: 77 78, à droite: 75 76 77
E (69)
    à gauche: 79 80, à droite: 77 78 79
T (70)
    à gauche: 81 82, à droite: 79 80 81
F (71)
    à gauche: 83 84 85 86 87 88 89 90, à droite: 81 82 83 84
StructValue (72)
    à gauche: 91, à droite: 90
Valuearg (73)
    à gauche: 92, à droite: 93 94
Valueargs (74)
    à gauche: 93 94, à droite: 91 93
Defaultvalue (75)
    à gauche: 95, à droite: 91
LValue (76)
    à gauche: 96 97, à droite: 69 86 97
Arguments (77)
    à gauche: 98 99, à droite: 89
ListExp (78)
    à gauche: 100 101, à droite: 65 98 100


État 0

    0 $accept: . Prog $end

    $défaut  réduction par utilisation de la règle 5 (DeclConsts)

    Prog        aller à l'état 1
    DeclConsts  aller à l'état 2


État 1

    0 $accept: Prog . $end

    $end  décalage et aller à l'état 3


État 2

    1 Prog: DeclConsts . DeclVars DeclFoncts
    2 DeclConsts: DeclConsts . CONST ListConst ';'
    3           | DeclConsts . error ListConst ';'
    4           | DeclConsts . CONST error ';'

    error  décalage et aller à l'état 4
    CONST  décalage et aller à l'état 5

    TYPE  réduction par utilisation de la règle 20 (DeclVars)
    VOID  réduction par utilisation de la règle 20 (DeclVars)

    DeclVars  aller à l'état 6


État 3

    0 $accept: Prog $end .

    $défaut  accepter


État 4

    3 DeclConsts: DeclConsts error . ListConst ';'

    error  décalage et aller à l'état 7
    IDENT  décalage et aller à l'état 8

    ListConst  aller à l'état 9


État 5

    2 DeclConsts: DeclConsts CONST . ListConst ';'
    4           | DeclConsts CONST . error ';'

    error  décalage et aller à l'état 10
    IDENT  décalage et aller à l'état 8

    ListConst  aller à l'état 11


État 6

    1 Prog: DeclConsts DeclVars . DeclFoncts
   19 DeclVars: DeclVars . TYPE Declarateurs ';'

    TYPE  décalage et aller à l'état 12
    VOID  décalage et aller à l'état 13

    DeclFoncts   aller à l'état 14
    DeclFonct    aller à l'état 15
    EnTeteFonct  aller à l'état 16


État 7

   14 ListConst: error . '=' Litteral

    '='  décalage et aller à l'état 17


État 8

   11 ListConst: IDENT . '=' Litteral
   12          | IDENT . error Litteral
   13          | IDENT . '=' error

    error  décalage et aller à l'état 18
    '='    décalage et aller à l'état 19


État 9

    3 DeclConsts: DeclConsts error ListConst . ';'
    6 ListConst: ListConst . ',' IDENT '=' Litteral
    7          | ListConst . error IDENT '=' Litteral
    8          | ListConst . ',' error '=' Litteral
    9          | ListConst . ',' IDENT error Litteral
   10          | ListConst . ',' IDENT '=' error

    error  décalage et aller à l'état 20
    ';'    décalage et aller à l'état 21
    ','    décalage et aller à l'état 22


État 10

    4 DeclConsts: DeclConsts CONST error . ';'
   14 ListConst: error . '=' Litteral

    ';'  décalage et aller à l'état 23
    '='  décalage et aller à l'état 17


État 11

    2 DeclConsts: DeclConsts CONST ListConst . ';'
    6 ListConst: ListConst . ',' IDENT '=' Litteral
    7          | ListConst . error IDENT '=' Litteral
    8          | ListConst . ',' error '=' Litteral
    9          | ListConst . ',' IDENT error Litteral
   10          | ListConst . ',' IDENT '=' error

    error  décalage et aller à l'état 20
    ';'    décalage et aller à l'état 24
    ','    décalage et aller à l'état 22


État 12

   19 DeclVars: DeclVars TYPE . Declarateurs ';'
   29 EnTeteFonct: TYPE . IDENT '(' Parametres ')'

    error  décalage et aller à l'état 25
    IDENT  décalage et aller à l'état 26

    Declarateurs  aller à l'état 27
    Declarateur   aller à l'état 28


État 13

   30 EnTeteFonct: VOID . IDENT '(' Parametres ')'

    IDENT  décalage et aller à l'état 29


État 14

    1 Prog: DeclConsts DeclVars DeclFoncts .
   26 DeclFoncts: DeclFoncts . DeclFonct

    TYPE  décalage et aller à l'état 30
    VOID  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 1 (Prog)

    DeclFonct    aller à l'état 31
    EnTeteFonct  aller à l'état 16


État 15

   27 DeclFoncts: DeclFonct .

    $défaut  réduction par utilisation de la règle 27 (DeclFoncts)


État 16

   28 DeclFonct: EnTeteFonct . Corps

    '{'  décalage et aller à l'état 32

    Corps  aller à l'état 33


État 17

   14 ListConst: error '=' . Litteral

    CARACTERE  décalage et aller à l'état 34
    NUM        décalage et aller à l'état 35
    ADDSUB     décalage et aller à l'état 36

    Litteral     aller à l'état 37
    NombreSigne  aller à l'état 38


État 18

   12 ListConst: IDENT error . Litteral

    CARACTERE  décalage et aller à l'état 34
    NUM        décalage et aller à l'état 35
    ADDSUB     décalage et aller à l'état 36

    Litteral     aller à l'état 39
    NombreSigne  aller à l'état 38


État 19

   11 ListConst: IDENT '=' . Litteral
   13          | IDENT '=' . error

    error      décalage et aller à l'état 40
    CARACTERE  décalage et aller à l'état 34
    NUM        décalage et aller à l'état 35
    ADDSUB     décalage et aller à l'état 36

    Litteral     aller à l'état 41
    NombreSigne  aller à l'état 38


État 20

    7 ListConst: ListConst error . IDENT '=' Litteral

    IDENT  décalage et aller à l'état 42


État 21

    3 DeclConsts: DeclConsts error ListConst ';' .

    $défaut  réduction par utilisation de la règle 3 (DeclConsts)


État 22

    6 ListConst: ListConst ',' . IDENT '=' Litteral
    8          | ListConst ',' . error '=' Litteral
    9          | ListConst ',' . IDENT error Litteral
   10          | ListConst ',' . IDENT '=' error

    error  décalage et aller à l'état 43
    IDENT  décalage et aller à l'état 44


État 23

    4 DeclConsts: DeclConsts CONST error ';' .

    $défaut  réduction par utilisation de la règle 4 (DeclConsts)


État 24

    2 DeclConsts: DeclConsts CONST ListConst ';' .

    $défaut  réduction par utilisation de la règle 2 (DeclConsts)


État 25

   24 Declarateur: error .

    $défaut  réduction par utilisation de la règle 24 (Declarateur)


État 26

   23 Declarateur: IDENT .
   29 EnTeteFonct: TYPE IDENT . '(' Parametres ')'

    '('  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 23 (Declarateur)


État 27

   19 DeclVars: DeclVars TYPE Declarateurs . ';'
   21 Declarateurs: Declarateurs . ',' Declarateur

    ';'  décalage et aller à l'état 46
    ','  décalage et aller à l'état 47


État 28

   22 Declarateurs: Declarateur .
   25 Declarateur: Declarateur . '[' NUM ']'

    '['  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 22 (Declarateurs)


État 29

   30 EnTeteFonct: VOID IDENT . '(' Parametres ')'

    '('  décalage et aller à l'état 49


État 30

   29 EnTeteFonct: TYPE . IDENT '(' Parametres ')'

    IDENT  décalage et aller à l'état 50


État 31

   26 DeclFoncts: DeclFoncts DeclFonct .

    $défaut  réduction par utilisation de la règle 26 (DeclFoncts)


État 32

   41 Corps: '{' . DeclConsts DeclVars SuiteInstr '}'

    $défaut  réduction par utilisation de la règle 5 (DeclConsts)

    DeclConsts  aller à l'état 51


État 33

   28 DeclFonct: EnTeteFonct Corps .

    $défaut  réduction par utilisation de la règle 28 (DeclFonct)


État 34

   16 Litteral: CARACTERE .

    $défaut  réduction par utilisation de la règle 16 (Litteral)


État 35

   17 NombreSigne: NUM .

    $défaut  réduction par utilisation de la règle 17 (NombreSigne)


État 36

   18 NombreSigne: ADDSUB . NUM

    NUM  décalage et aller à l'état 52


État 37

   14 ListConst: error '=' Litteral .

    $défaut  réduction par utilisation de la règle 14 (ListConst)


État 38

   15 Litteral: NombreSigne .

    $défaut  réduction par utilisation de la règle 15 (Litteral)


État 39

   12 ListConst: IDENT error Litteral .

    $défaut  réduction par utilisation de la règle 12 (ListConst)


État 40

   13 ListConst: IDENT '=' error .

    $défaut  réduction par utilisation de la règle 13 (ListConst)


État 41

   11 ListConst: IDENT '=' Litteral .

    $défaut  réduction par utilisation de la règle 11 (ListConst)


État 42

    7 ListConst: ListConst error IDENT . '=' Litteral

    '='  décalage et aller à l'état 53


État 43

    8 ListConst: ListConst ',' error . '=' Litteral

    '='  décalage et aller à l'état 54


État 44

    6 ListConst: ListConst ',' IDENT . '=' Litteral
    9          | ListConst ',' IDENT . error Litteral
   10          | ListConst ',' IDENT . '=' error

    error  décalage et aller à l'état 55
    '='    décalage et aller à l'état 56


État 45

   29 EnTeteFonct: TYPE IDENT '(' . Parametres ')'

    TYPE  décalage et aller à l'état 57
    VOID  décalage et aller à l'état 58

    $défaut  réduction par utilisation de la règle 32 (Parametres)

    Parametres  aller à l'état 59
    ListTypVar  aller à l'état 60


État 46

   19 DeclVars: DeclVars TYPE Declarateurs ';' .

    $défaut  réduction par utilisation de la règle 19 (DeclVars)


État 47

   21 Declarateurs: Declarateurs ',' . Declarateur

    error  décalage et aller à l'état 25
    IDENT  décalage et aller à l'état 61

    Declarateur  aller à l'état 62


État 48

   25 Declarateur: Declarateur '[' . NUM ']'

    NUM  décalage et aller à l'état 63


État 49

   30 EnTeteFonct: VOID IDENT '(' . Parametres ')'

    TYPE  décalage et aller à l'état 57
    VOID  décalage et aller à l'état 58

    $défaut  réduction par utilisation de la règle 32 (Parametres)

    Parametres  aller à l'état 64
    ListTypVar  aller à l'état 60


État 50

   29 EnTeteFonct: TYPE IDENT . '(' Parametres ')'

    '('  décalage et aller à l'état 45


État 51

    2 DeclConsts: DeclConsts . CONST ListConst ';'
    3           | DeclConsts . error ListConst ';'
    4           | DeclConsts . CONST error ';'
   41 Corps: '{' DeclConsts . DeclVars SuiteInstr '}'

    error  décalage et aller à l'état 4
    CONST  décalage et aller à l'état 5

    CARACTERE  réduction par utilisation de la règle 20 (DeclVars)
    NUM        réduction par utilisation de la règle 20 (DeclVars)
    IDENT      réduction par utilisation de la règle 20 (DeclVars)
    TYPE       réduction par utilisation de la règle 20 (DeclVars)
    ADDSUB     réduction par utilisation de la règle 20 (DeclVars)
    RETURN     réduction par utilisation de la règle 20 (DeclVars)
    IF         réduction par utilisation de la règle 20 (DeclVars)
    WHILE      réduction par utilisation de la règle 20 (DeclVars)
    READE      réduction par utilisation de la règle 20 (DeclVars)
    READC      réduction par utilisation de la règle 20 (DeclVars)
    PRINT      réduction par utilisation de la règle 20 (DeclVars)
    DO         réduction par utilisation de la règle 20 (DeclVars)
    FOR        réduction par utilisation de la règle 20 (DeclVars)
    SWITCH     réduction par utilisation de la règle 20 (DeclVars)
    VALUE      réduction par utilisation de la règle 20 (DeclVars)
    ';'        réduction par utilisation de la règle 20 (DeclVars)
    '('        réduction par utilisation de la règle 20 (DeclVars)
    '{'        réduction par utilisation de la règle 20 (DeclVars)
    '}'        réduction par utilisation de la règle 20 (DeclVars)
    '!'        réduction par utilisation de la règle 20 (DeclVars)

    DeclVars  aller à l'état 65


État 52

   18 NombreSigne: ADDSUB NUM .

    $défaut  réduction par utilisation de la règle 18 (NombreSigne)


État 53

    7 ListConst: ListConst error IDENT '=' . Litteral

    CARACTERE  décalage et aller à l'état 34
    NUM        décalage et aller à l'état 35
    ADDSUB     décalage et aller à l'état 36

    Litteral     aller à l'état 66
    NombreSigne  aller à l'état 38


État 54

    8 ListConst: ListConst ',' error '=' . Litteral

    CARACTERE  décalage et aller à l'état 34
    NUM        décalage et aller à l'état 35
    ADDSUB     décalage et aller à l'état 36

    Litteral     aller à l'état 67
    NombreSigne  aller à l'état 38


État 55

    9 ListConst: ListConst ',' IDENT error . Litteral

    CARACTERE  décalage et aller à l'état 34
    NUM        décalage et aller à l'état 35
    ADDSUB     décalage et aller à l'état 36

    Litteral     aller à l'état 68
    NombreSigne  aller à l'état 38


État 56

    6 ListConst: ListConst ',' IDENT '=' . Litteral
   10          | ListConst ',' IDENT '=' . error

    error      décalage et aller à l'état 69
    CARACTERE  décalage et aller à l'état 34
    NUM        décalage et aller à l'état 35
    ADDSUB     décalage et aller à l'état 36

    Litteral     aller à l'état 70
    NombreSigne  aller à l'état 38


État 57

   39 ListTypVar: TYPE . IDENT
   40           | TYPE . Identtab

    IDENT  décalage et aller à l'état 71

    Identtab  aller à l'état 72


État 58

   31 Parametres: VOID .

    $défaut  réduction par utilisation de la règle 31 (Parametres)


État 59

   29 EnTeteFonct: TYPE IDENT '(' Parametres . ')'

    ')'  décalage et aller à l'état 73


État 60

   33 Parametres: ListTypVar .
   38 ListTypVar: ListTypVar . ',' TYPE IDENT

    ','  décalage et aller à l'état 74

    $défaut  réduction par utilisation de la règle 33 (Parametres)


État 61

   23 Declarateur: IDENT .

    $défaut  réduction par utilisation de la règle 23 (Declarateur)


État 62

   21 Declarateurs: Declarateurs ',' Declarateur .
   25 Declarateur: Declarateur . '[' NUM ']'

    '['  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 21 (Declarateurs)


État 63

   25 Declarateur: Declarateur '[' NUM . ']'

    ']'  décalage et aller à l'état 75


État 64

   30 EnTeteFonct: VOID IDENT '(' Parametres . ')'

    ')'  décalage et aller à l'état 76


État 65

   19 DeclVars: DeclVars . TYPE Declarateurs ';'
   41 Corps: '{' DeclConsts DeclVars . SuiteInstr '}'

    TYPE  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 43 (SuiteInstr)

    SuiteInstr  aller à l'état 78


État 66

    7 ListConst: ListConst error IDENT '=' Litteral .

    $défaut  réduction par utilisation de la règle 7 (ListConst)


État 67

    8 ListConst: ListConst ',' error '=' Litteral .

    $défaut  réduction par utilisation de la règle 8 (ListConst)


État 68

    9 ListConst: ListConst ',' IDENT error Litteral .

    $défaut  réduction par utilisation de la règle 9 (ListConst)


État 69

   10 ListConst: ListConst ',' IDENT '=' error .

    $défaut  réduction par utilisation de la règle 10 (ListConst)


État 70

    6 ListConst: ListConst ',' IDENT '=' Litteral .

    $défaut  réduction par utilisation de la règle 6 (ListConst)


État 71

   34 Identtab: IDENT . '[' ']'
   39 ListTypVar: TYPE IDENT .

    '['  décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 39 (ListTypVar)


État 72

   35 Identtab: Identtab . '[' ']'
   36         | Identtab . error ']'
   37         | Identtab . error error
   40 ListTypVar: TYPE Identtab .

    error  décalage et aller à l'état 80
    '['    décalage et aller à l'état 81

    ','  réduction par utilisation de la règle 40 (ListTypVar)
    ')'  réduction par utilisation de la règle 40 (ListTypVar)


État 73

   29 EnTeteFonct: TYPE IDENT '(' Parametres ')' .

    $défaut  réduction par utilisation de la règle 29 (EnTeteFonct)


État 74

   38 ListTypVar: ListTypVar ',' . TYPE IDENT

    TYPE  décalage et aller à l'état 82


État 75

   25 Declarateur: Declarateur '[' NUM ']' .

    $défaut  réduction par utilisation de la règle 25 (Declarateur)


État 76

   30 EnTeteFonct: VOID IDENT '(' Parametres ')' .

    $défaut  réduction par utilisation de la règle 30 (EnTeteFonct)


État 77

   19 DeclVars: DeclVars TYPE . Declarateurs ';'

    error  décalage et aller à l'état 25
    IDENT  décalage et aller à l'état 61

    Declarateurs  aller à l'état 27
    Declarateur   aller à l'état 28


État 78

   41 Corps: '{' DeclConsts DeclVars SuiteInstr . '}'
   42 SuiteInstr: SuiteInstr . Instr

    CARACTERE  décalage et aller à l'état 83
    NUM        décalage et aller à l'état 84
    IDENT      décalage et aller à l'état 85
    ADDSUB     décalage et aller à l'état 86
    RETURN     décalage et aller à l'état 87
    IF         décalage et aller à l'état 88
    WHILE      décalage et aller à l'état 89
    READE      décalage et aller à l'état 90
    READC      décalage et aller à l'état 91
    PRINT      décalage et aller à l'état 92
    DO         décalage et aller à l'état 93
    FOR        décalage et aller à l'état 94
    SWITCH     décalage et aller à l'état 95
    VALUE      décalage et aller à l'état 96
    ';'        décalage et aller à l'état 97
    '('        décalage et aller à l'état 98
    '{'        décalage et aller à l'état 99
    '}'        décalage et aller à l'état 100
    '!'        décalage et aller à l'état 101

    Instr        aller à l'état 102
    Exp          aller à l'état 103
    EB           aller à l'état 104
    TB           aller à l'état 105
    FB           aller à l'état 106
    M            aller à l'état 107
    E            aller à l'état 108
    T            aller à l'état 109
    F            aller à l'état 110
    StructValue  aller à l'état 111
    LValue       aller à l'état 112


État 79

   34 Identtab: IDENT '[' . ']'

    ']'  décalage et aller à l'état 113


État 80

   36 Identtab: Identtab error . ']'
   37         | Identtab error . error

    error  décalage et aller à l'état 114
    ']'    décalage et aller à l'état 115


État 81

   35 Identtab: Identtab '[' . ']'

    ']'  décalage et aller à l'état 116


État 82

   38 ListTypVar: ListTypVar ',' TYPE . IDENT

    IDENT  décalage et aller à l'état 117


État 83

   88 F: CARACTERE .

    $défaut  réduction par utilisation de la règle 88 (F)


État 84

   87 F: NUM .

    $défaut  réduction par utilisation de la règle 87 (F)


État 85

   89 F: IDENT . '(' Arguments ')'
   96 LValue: IDENT .

    '('  décalage et aller à l'état 118

    $défaut  réduction par utilisation de la règle 96 (LValue)


État 86

   83 F: ADDSUB . F

    CARACTERE  décalage et aller à l'état 83
    NUM        décalage et aller à l'état 84
    IDENT      décalage et aller à l'état 85
    ADDSUB     décalage et aller à l'état 86
    VALUE      décalage et aller à l'état 96
    '('        décalage et aller à l'état 98
    '!'        décalage et aller à l'état 101

    F            aller à l'état 119
    StructValue  aller à l'état 111
    LValue       aller à l'état 120


État 87

   46 Instr: RETURN . Exp ';'
   47      | RETURN . ';'

    CARACTERE  décalage et aller à l'état 83
    NUM        décalage et aller à l'état 84
    IDENT      décalage et aller à l'état 85
    ADDSUB     décalage et aller à l'état 86
    VALUE      décalage et aller à l'état 96
    ';'        décalage et aller à l'état 121
    '('        décalage et aller à l'état 98
    '!'        décalage et aller à l'état 101

    Exp          aller à l'état 122
    EB           aller à l'état 104
    TB           aller à l'état 105
    FB           aller à l'état 106
    M            aller à l'état 107
    E            aller à l'état 108
    T            aller à l'état 109
    F            aller à l'état 110
    StructValue  aller à l'état 111
    LValue       aller à l'état 112


État 88

   51 Instr: IF . '(' Exp ')' Instr
   52      | IF . '(' Exp ')' Instr ELSE Instr

    '('  décalage et aller à l'état 123


État 89

   53 Instr: WHILE . '(' Exp ')' Instr

    '('  décalage et aller à l'état 124


État 90

   48 Instr: READE . '(' IDENT ')' ';'

    '('  décalage et aller à l'état 125


État 91

   49 Instr: READC . '(' IDENT ')' ';'

    '('  décalage et aller à l'état 126


État 92

   50 Instr: PRINT . '(' Exp ')' ';'

    '('  décalage et aller à l'état 127


État 93

   55 Instr: DO . Instr WHILE '(' Exp ')' ';'
